<resources>
    <string name="app_name">Wise Coin</string>
    <string name="authorization_error">Authorization error! Please, try to add or recreate a token!</string>
    <string name="documentation_not_available">Documentation is not available!</string>
    <string name="why_we_need_token">Your Monobank token is required to retrieve and display your income and outcome transactions within the app.\n\nWe only access the necessary information required for tracking your financial transactions, and your data is handled with the utmost confidentiality.</string>
    <string name="login_with_token">Login with token</string>
    <string name="error_too_many_requests">Too many requests error!</string>
    <string name="error_unknown_token">Unknown token error!</string>
    <string name="error_no_internet_connection">No Internet connection error!</string>
    <string name="error_unknown">Service unavailable. Please, try later!</string>
    <string name="history">History</string>
    <string name="analytics">Analytics</string>
    <string name="home">Home</string>
    <string name="menu">Menu</string>
    <string name="expenses">Expenses</string>
    <string name="incomes">Incomes</string>
    <string name="income">Income</string>
    <string name="add_category">Add category</string>
    <string name="percentage">%s\%%</string>
    <string name="sign_out">Sign out</string>
    <string name="hryvna_sign">₴</string>
    <string name="dollar_sign">$</string>
    <string name="euro_sign">€</string>
    <string name="hryvna">Hryvnia (₴)</string>
    <string name="euro">Euro (€)</string>
    <string name="dollar">Dollar ($)</string>
    <string name="smaller_period">Smaller period</string>
    <string name="bigger_period">Bigger period.</string>
    <string name="week">Week</string>
    <string name="month">Month</string>
    <string name="six_month">Six Months</string>
    <string name="year">Year</string>
    <string name="category">Category</string>
    <string name="amount_price">Amount (price)</string>
    <string name="description">Description</string>
    <string name="transaction_time">Transaction time:</string>
    <string name="set_time">Set Time</string>
    <string name="transaction_image">Transaction image</string>
    <string name="add_transaction">Add transaction</string>
    <string name="create">Create</string>
    <string name="error_enter_valid_amount">Enter a valid amount(price)!</string>
    <string name="error_enter_category">Enter a valid category!</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="welcome_to_wise_coin">Welcome to\nWise Coin!</string>
    <string name="skip">Skip</string>
    <string name="continue_with_monobank">Continue with Monobank</string>
    <string name="current_currency_is">Current currency is:</string>
    <string name="change_token">Change token</string>
    <string name="monobank_token_is_active">Monobank token is active</string>
    <string name="monobank_token_is_not_active">Monobank token is not active</string>
    <string name="change_currency">Change currency</string>
    <string name="change">Change</string>
    <string name="remove">Remove</string>
    <string name="select_currency">Select Currency</string>
    <string name="add_token">Add token</string>
    <string name="select">Select</string>
    <string name="expense">Expense</string>
</resources>